--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,14 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: 飲冰
-email: facai.yan@gmail.com
+title: 军长
+email: lvdingjinldj@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  富貴福澤，將厚吾之生也；貧賤憂戚，庸玉女於成也。
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://facaiy.github.io" # the base hostname & protocol for your site
-twitter_username: yfcoldfire
-github_username:  facaiy
+  穷极一生去做一件美好的事情。
+baseurl: "https://lvdingjin.github.io" # the subpath of your site, e.g. /blog
+url: "https://lvdingjin.github.io" # the base hostname & protocol for your site
+twitter_username: # waiting #
+github_username:  lvdingjin
 
 # Build settings
 markdown: kramdown
