--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: 军长
+title: 军长的博客
 email: lvdingjinldj@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
   穷极一生去做一件美好的事情。
